# OpenEnv-WolfeClick

./: .gitignore  Dockerfile  MODEL_CARD.md  README.md  __init__.py  client.py  convert_battle_log.py  models.py  openenv.yaml  pyproject.toml  record_battle.py  space_app.py  trainer.ipynb  watch_battle.ipynb
battle_logs/: example_battle.json  replay_battle.json
benckmarks/: benchmark.ipynb  benchmark.md  benchmark.py
docs/: medium_draft.md
env/: __init__.py  models.py
env/server/: app.py  environment.py
examples/: run_single_episode.py  watch_model_battle.py
server/: __init__.py
server/server/: Dockerfile  app.py
src/smogon_rl/: __init__.py  action_space.py  config.py  openenv_sync_env.py  pokeenv_client.py  reward.py  state_formatter.py
static/: app.js  index.html  styles.css
