[project]
name = "smogon-rl"
version = "0.1.0"
description = "Theory-of-Mind Pokémon RL environment using poke-env and OpenEnv."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Atharva" }
]
dependencies = [
  "poke-env>=0.8.0,<0.9.0",
  "numpy>=1.24.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = "smogon-rl"

[tool.uv.sources]

